--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -1669,6 +1669,7 @@ We have set you up with a few core categories to get you started: Lifestyle, Sel
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="50" id="0Jd-pf-qty"/>
                                                         </constraints>
+                                                        <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="17"/>
                                                         <state key="normal" title="Select categories">
                                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                         </state>
