--- a/The Math/CategoryView.xib
+++ b/The Math/CategoryView.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -7,7 +7,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CategoryView" customModule="The_Math" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CategoryView" customModule="HowAmIDoing" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="60" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
@@ -17,20 +17,22 @@
                     <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="08l-Kd-KUT" customClass="CategorySliderView" customModule="The_Math" customModuleProvider="target">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="08l-Kd-KUT" customClass="CategorySliderView" customModule="HowAmIDoing" customModuleProvider="target">
                     <rect key="frame" x="8" y="262" width="44" height="44"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eLQ-XC-xvT">
                             <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="44" id="9hv-gA-DCi"/>
+                                <constraint firstAttribute="width" constant="44" id="CBp-mC-6TN"/>
+                            </constraints>
                         </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="eLQ-XC-xvT" firstAttribute="top" secondItem="08l-Kd-KUT" secondAttribute="top" id="ImU-cE-rCo"/>
-                        <constraint firstItem="eLQ-XC-xvT" firstAttribute="leading" secondItem="08l-Kd-KUT" secondAttribute="leading" id="c5t-Tc-zeR"/>
                         <constraint firstAttribute="width" secondItem="08l-Kd-KUT" secondAttribute="height" multiplier="1:1" id="eX0-oR-fLN"/>
-                        <constraint firstAttribute="trailing" secondItem="eLQ-XC-xvT" secondAttribute="trailing" id="lQo-qc-5Lx"/>
-                        <constraint firstAttribute="bottom" secondItem="eLQ-XC-xvT" secondAttribute="bottom" id="t8Q-K0-zVu"/>
+                        <constraint firstAttribute="centerY" secondItem="eLQ-XC-xvT" secondAttribute="centerY" id="lCh-Y1-OLC"/>
+                        <constraint firstAttribute="centerX" secondItem="eLQ-XC-xvT" secondAttribute="centerX" id="ztf-PW-n07"/>
                     </constraints>
                     <connections>
                         <outlet property="sliderCategoryIconView" destination="eLQ-XC-xvT" id="yuZ-EY-QKR"/>
